kubernetes/ua/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    component: client
spec:
  replicas: 2
  selector:
    matchLabels:
      component: client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
      - name: client-container
        image: tedcook94/angularflask_client:ua
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 4200
          periodSeconds: 5
          timeoutSeconds: 5
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 4200
          failureThreshold: 3
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: []
status: {}
