kubernetes/ua/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
      - name: database-container
        image: tedcook94/angularflask_database:ua
        imagePullPolicy: Always
        readinessProbe:
          exec:
            command:
            - pg_isready 
            - -U postgres || exit 1
          periodSeconds: 5
          timeoutSeconds: 5
          initialDelaySeconds: 5
        livenessProbe:
          exec:
            command:
            - pg_isready 
            - -U postgres || exit 1
          failureThreshold: 3
          periodSeconds: 10
          timeoutSeconds: 5
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: database-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: database-data
        persistentVolumeClaim:
          claimName: database-data
status: {}
