kubernetes/ua/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    component: client
spec:
  ports:
  - name: "http"
    port: 4200
    targetPort: 4200
  selector:
    component: client
status:
  loadBalancer: {}
