kubernetes/ua/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    component: database
spec:
  ports:
  - name: "psql"
    port: 5432
    targetPort: 5432
  selector:
    component: database
