kubernetes/ua/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    component: server
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 5000
    targetPort: 5000
  selector:
    component: server
status:
  loadBalancer: {}
