kubernetes/ua/aws-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: server-service
          servicePort: 5000
      - path: /*
        backend:
          serviceName: client-service
          servicePort: 4200
