kubernetes/ua/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 4200
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 5000
